@@ -1,13 +1,0 @@
-usr/bin/kppp
-usr/bin/kppplogview
-usr/share/applications/kde4/Kppp.desktop
-usr/share/applications/kde4/kppplogview.desktop
-usr/share/dbus-1/interfaces/org.kde.kppp.xml
-usr/share/doc/kde/HTML/en/kppp/
-usr/share/icons/hicolor/128x128/apps/kppp.png
-usr/share/icons/hicolor/16x16/apps/kppp.png
-usr/share/icons/hicolor/22x22/apps/kppp.png
-usr/share/icons/hicolor/32x32/apps/kppp.png
-usr/share/icons/hicolor/48x48/apps/kppp.png
-usr/share/icons/hicolor/64x64/apps/kppp.png
-usr/share/kde4/apps/kppp/
