@@ -2,6 +2,11 @@ kppp (4:16.08.0-0r1) UNRELEASED; urgency=medium
 
   [ Pino Toscano ]
   * New upstream release.
+  * Stop forcing the local installation to debian/tmp, letting the package
+    directory as install place.
+    - remove kppp.install, no more used now
+    - move the change of ownership/permissions of /usr/bin/kppp in the
+      dh_fixperms override
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 25 Aug 2016 06:11:53 +0200
 
